# Web4asset-blockchain

./: .env.development  .env.production  .env.staging  App.js  App.jsx  CMakeLists  Cargo.toml  Deploy.sh  Ether.js  Index.js  Near.js  README.md  Website  bash  bash.sh  build.sh  bulkSaveContracts.js  config.js  export-verified-contractaddress-opensource-license.csv  hardhat.config.ts  index.html  manifest.json  package-lock.json  package.json  technical-specifications.md  truffle-config.js  tsconfig.json  wallet_manager.py  web4asset.py  webpack.config.js  website  whitepaper.html
.Bash/: install.sh  run_deployment_script.sh
.bash/: Node.sh  install.sh
App/: index.html
Asset/: Style.css
Bash/: Node.js  install.sh
Blockchain/: index.html  transaction.js
Cobtracts/: Web4AssetToken.sol
Config/: Wallet.json  config.js  secure.js
Context/: Web3Modal.tsx
Contracts/: DAO.sol  Donation.sol  ERC20.sol  ERC721.sol  Escrow.sol  Insurance.sol  Investment_Fund.sol  NFTMarketplace.sol  Oracle.sol  Project.sol  Smasher-contract.sol  Staking.sol  Subscription.sol  SupplyChainAutomation.sol  TestToken.sol  Ticket_Sales.sol  Ticketing.sol  Time-Locked_Investment.sol  Voting.sol  Web4AssetToken.sol  Web4Asset_metadata.json  Web4assetToken.sol  keystorage.sol  service.js
Docs/: Index.html  app.js  index.html  technical-specifications.html
Oatpp/: CMakeLists.txt
Oatpp-meta/: CMakeLists.txt
Public/: index.html
Wallet/: wallet.js
Whitepaper/: whitepaper.md
assets/: Main.css
contracts/: ENSfactory.sol  Faucet.sol  hardhat.config.ts  proxy.sol
https/: CNAME
(+64 files in other folders)
